--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
                 navigator.mozVibrate || navigator.msVibrate;
             //if phone support navigator.vibrate
             if (navigator.vibrate) {
+                alert('vibrate1000');
                 //vibrate 1 second
                 navigator.vibrate(1000);
             }
             //put your own code here etc.
             alert('Shake!');
+             alert('vibrate2000');
 
         }
     };
