--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
                 alert('vibrate1000');
                 //vibrate 1 second
                 navigator.vibrate(1000);
+            }else{
+              alert('vibrate2000');
             }
             //put your own code here etc.
             alert('Shake!');
-             alert('vibrate2000');
+           
 
         }
     };
